@@ -2,7 +2,7 @@
 // $Id$
 /////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (C) 2001-2009  The Bochs Project
+//  Copyright (C) 2001-2017  The Bochs Project
 //
 //  This library is free software; you can redistribute it and/or
 //  modify it under the terms of the GNU Lesser General Public
@@ -53,6 +53,7 @@ typedef struct {
     bx_bool input;
   } CONTROL;
   Bit8u IRQ;
+  bx_param_string_c *outfparam;
   FILE *output;
   bx_bool initmode;
 } bx_par_t;
@@ -76,6 +77,9 @@ private:
   Bit32u read(Bit32u address, unsigned io_len);
   void   write(Bit32u address, Bit32u value, unsigned io_len);
 #endif
+  static const char* parport_outfparam_handler(bx_param_string_c *param, int set,
+                                               const char *oldval, const char *val,
+                                               int maxlen);
 };
 
 #endif
