@@ -30,6 +30,8 @@ Changes after 2.6.8 release:
       emulation code. (patch by Ben Lunt).
   - Hard drive
     - Several fixes in some disk image modes.
+  - Parallel port
+    - Added support for changing output file at runtime.
   - Sound
     - Added separate thread for the PCM data conversion.
   - USB
